# handm_v2

./: README.md  pyproject.toml
conf/: config.yaml
notebook/: log_weight.ipynb  main.ipynb  time_weight.ipynb
src/: candidates_generator.py  cat_ranker.py  dataset.py  embedding_generator.py  fairness_metrics.py  lgb_ranker.py  logger.py  main.py  main_refactor.py  metrics_calculator.py  mmr_reranker.py  ranker.py  reranker_fairness.py  reranker_item2vec.py  two_tower_model.py  utils.py
src/schema/: config.py
