[project]
name = "handm-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "faiss-cpu>=1.11.0.post1",
    "gensim>=4.3.2",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "node2vec>=0.5.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "scipy==1.10.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "torch>=2.7.1",
]
